o Packaging
  o Moved source code out of main jar into instinct-<version>-sources.jar.
o Infrastructure
  o Upgraded to: Functional Java 2.10.
o Bugs
  o (Issue 21) Expected exception try-catch should only wrap specs, not before and after.
  o (Issue 19) Throwing exception out of mocked code confused expected exception handling.


* Instinct Release 0.1.8 *

Maintenance release; Added the ability to customise the way specifications and other lifecycle
methods are found.

o Core Features
  o Custom specification, before specification and after specification annotations and
    naming conventions can be provided via the Context annotation. This can also be used
    to turn off naming convention-based detection (using NoNamingConvention).
o Infrastructure
  o Upgraded to: Functional Java 2.8.
o Bugs
  o (Issue 36) Abstract classes are being run as a result of specification runner refactoring.
  o (Issue 37) Expected exceptions are being printed to console in Ant runner even though spec passes.
  o (Issue 38) Functional java jar is not included in release zip.


* Instinct Release 0.1.7 *

Maintenance release; specification double naming conventions, removed in progress
specification state, runners emit pending reason, added Functional Java based matchers,
upgraded to Ant 1.7.1, CGLib 2.2, jMock 2.5.0 and Objenesis 1.1, internal re-write of
specification runners.

o Core Features
  o Automatic creation of specification doubles (mocks, stubs and dummies) based on naming
    convention (in addition to annotations).
  o Removed in progress specification state, use pending instead.
  o All runners now emit pending specification reason.
o Expectation API
  o Added function matcher, e.g. expect.that(list).doesNotContain({int i => i > 3} (based
    on Functional Java's fj.F).
  o Added fj.data.List matcher.
o Infrastructure
  o Added dependency on Functional Java, used both internally and for use in expectation
    API.
  o Continued clean up of specification running code.