@@ -1,29 +1,0 @@
-/*
- * Copyright 2006-2008 Workingmouse
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package com.googlecode.instinct.internal.core;
-
-import com.googlecode.instinct.integrate.junit4.InstinctRunner;
-import com.googlecode.instinct.marker.annotate.Specification;
-import org.junit.runner.RunWith;
-
-@RunWith(InstinctRunner.class)
-public final class Foo {
-    // Check expected: 1) different class, 2) different message, 3)  other error in lifecycle, 4) errors elsewhere in lifecycle
-    @Specification
-    public void xxx() {
-    }
-}
